--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 
 /* Header */
 header {
-  background-color: #FFFFF; /* Blanc */
+  background-color: #FFFFFF; /* Blanc */
   text-align: center;
   padding: 40px 20px;
   color: #228B22; /* Vert forêt */
